--- a/index.html
+++ b/index.html
@@ -1,12 +1,55 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Teste Mateus</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.1/css/all.css" integrity="sha384-/frq1SRXYH/bSyou/HUp/hib7RVN1TawQYja658FEOodR/FQBKVqT9Ol+Oz3Olq5" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
+    <title>Mateus Toledo</title>
+  </head>
+  <body>
+    <header>
+      <div>
+        <img src="../Gama-Academy/logo_heron.png" alt="Logo Mateus" width="100" height="auto"/>
+      </div>
+      <ul>
+        <li>
+          <a target="_blank" href="https://github.com/mateusvtoledo/">github</a>
+        </li>
+        <li>
+          <a  target="_blank" href="mailto:mateusvtoledo@gmail.com">e-mail</a>
+        </li>
+        <li>
+          <a  target="_blank" href="tel:+5511960832943">telefone</a>
+        </li>
+      </ul>
+    </header>
+
+    <main>
+      <section class="container">
+          <div class="name">
+            <h1>Mateus Toledo</h1>
+            <h5>Front-End Developer</h5>
+          </div>
+          <div id="arrow">
+            <i class="fa-solid fa-chevron-down"></i>
+          </div id="about">
+          <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, ex beatae quas necessitatibus ut quam earum iusto illum quaerat numquam in temporibus laborum. Doloribus nemo sapiente qui, voluptate enim sint.
+          </p>
+          <div class="form">
+              <div>
+                  <p>Deixe seu contato!</p>
+              </div>
+              <form action="">
+                  <input type="text" placeholder="seu melhor email :)">
+                  <button>enviar!</button>
+              </form>
+
+          </div>
+      </section>
+    </main>
     
-</body>
+  </body>
 </html>
